# yobotics_quad48

./: README.md  VERSION.txt  config.yaml  config_sim.yaml
yobotics_sdk_e15_sdk_260408/: CMakeLists.txt  README.md  SDK使用说明.md
yobotics_sdk_e15_sdk_260408/example/: CMakeLists.txt
yobotics_sdk_e15_sdk_260408/example/E15/: E15_http_server.cpp  E15_robot_state_client.cpp  E15_sport_client.cpp
yobotics_sdk_e15_sdk_260408/include/common/: decl.hpp  error.hpp
yobotics_sdk_e15_sdk_260408/include/common/Timer/: Timer.hpp
yobotics_sdk_e15_sdk_260408/include/common/lcm_types/: control_messages.lcm  development_command_t.lcm  development_state_t.lcm  motor_cmd_t.lcm  motor_state_t.lcm  power_state_t.lcm  quad_joint_state.lcm  sport_client_state_t.lcm
yobotics_sdk_e15_sdk_260408/include/common/lcm_types/control_messages/: Command.hpp  Command.py  Response.hpp  Response.py  __init__.py  float64.hpp  float64.py
yobotics_sdk_e15_sdk_260408/include/common/lcm_types/cpp/: development_command_t.hpp  development_state_t.hpp  imu_data_t.hpp  motor_cmd_t.hpp  motor_state_t.hpp  nav_enable_t.hpp  power_state_t.hpp  quad_joint_command_t.hpp  quad_joint_state_t.hpp  rc_cmd_t.hpp  robot_state_t.hpp  sport_client_cmd_t.hpp  sport_client_state_t.hpp  (+1 more)
yobotics_sdk_e15_sdk_260408/include/common/thread/: PeriodicTask.cpp  PeriodicTask.h
yobotics_sdk_e15_sdk_260408/include/robot/channel/: channel_all.cpp  channel_name.hpp  channel_publisher.hpp  channel_subscriber.hpp  httplib.hpp  json.hpp
yobotics_sdk_e15_sdk_260408/tools/: CMakeLists.sdk_lib_only.txt  generate_clean_sdk.sh  generate_clean_sdk_aarch64_ubuntu22.sh  send_to_board.sh
yobotics_sdk_e15_sdk_260408/tools/toolchain/: aarch64-ubuntu22.04.cmake
(+90 files in other folders)
